# lightning-kokkos-mock

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
bench/: plot_bench.py  run_bench.sh  run_cpu_bench.sh  run_gpu_bench.sh  sub_bench.sh
src/: CMakeLists.txt  exercise_4_solution.cpp  lightning_kokkos.cpp
src/gates/: CMakeLists.txt  Gates.hpp  SparseGates.hpp
src/util/: CMakeLists.txt
work/cubatched/: Makefile  plot_bench.py  run_bench.sh  zgemm_example.cpp
work/cublas/: plot_bench.py  run_bench.sh  zgemm_example.cpp
work/cuquantum/: Makefile  ex1.cpp  plot_bench.py  run_gpu_bench.sh
work/cuquantum_vs_cusparse/: Makefile  ex1.cpp
work/kokkos_spmm/: CMakeLists.txt  ex1.cpp
work/spmm_csr/: Makefile  plot_bench.py  run_bench.sh  spmm_csr_example.cpp
